<resources>
    <string name="app_name">InvesUp</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="con_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Signup</string>
    <string name="already_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_address">Email ID</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="reenter_password">Re-Enter Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_investor">Investor</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_dash_board">Dashboard</string>

</resources>