<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15.7dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="80dp"
        android:layout_marginRight="15.7dp"
        android:background="@drawable/white_cueve_bg"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20.7dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="57.7dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/sign_up"
                    android:textColor="@color/text_color_very_dark_gray"
                    android:textSize="31.3sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/email_address"
                    android:textColor="@color/text_color_light_gray"
                    android:textSize="13.3sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginRight="30dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_username"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:id="@+id/idEdtUserName"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/password"
                    android:textColor="@color/text_color_light_gray"
                    android:textSize="13.3sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginRight="30dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/idEdtPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/con_password"
                    android:textColor="@color/text_color_light_gray"
                    android:textSize="13.3sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginRight="30dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reenter_password"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/idEdtConPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:layout_marginRight="50dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="35dp"
                    android:layout_width="18.7dp"
                    android:layout_height="15.3dp"
                    android:src="@drawable/black_arrow"
                    android:id="@+id/idBtnSignUp"/>

            </LinearLayout>


        </FrameLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/already_account"
                android:textColor="@color/white_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/sign_in"
                android:textColor="@color/white_color"
                android:textSize="15sp"
                android:id="@+id/idTextSignIn"/>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>