<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15.7dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15.7dp"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="444dp"
                android:background="@drawable/white_cueve_bg" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20.7dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="57.7dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/login"
                    android:textColor="@color/text_color_very_dark_gray"
                    android:textSize="31.3sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/email_address"
                    android:textColor="@color/text_color_light_gray"
                    android:textSize="13.3sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginRight="30dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_username"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:id="@+id/idEdtUserName"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/password"
                    android:textColor="@color/text_color_light_gray"
                    android:textSize="13.3sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginRight="30dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/idEdtPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

              <!--  <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11.7dp"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:paddingRight="44.3dp"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textCursorDrawable="@drawable/grey_cursor_color"
                    android:textSize="15sp"
                    app:drawable_hide="@drawable/hide1"
                    app:drawable_show="@drawable/show"
                    app:tint_color="@color/text_color_light_gray"
                    tools:ignore="MissingClass" />
-->



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="17.3dp"
                    android:layout_marginRight="44.3dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/forgot_password"
                    android:textColor="@color/text_color_light_gray"
                    android:textSize="12.3sp" />

                <ImageView
                    android:layout_marginRight="50dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="35dp"
                    android:layout_width="18.7dp"
                    android:layout_height="15.3dp"
                    android:src="@drawable/black_arrow"
                    android:id="@+id/idBtnSignIn"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:paddingLeft="30dp">



               <!-- <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                     />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="29dp"
                    android:layout_marginTop="30dp"
                     />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="29dp"
                        android:layout_marginTop="50dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="18.7dp"
                        android:layout_height="15.3dp"
                        android:src="@drawable/black_arrow" />

                </LinearLayout>-->

            </LinearLayout>
        </FrameLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/not_registered"
                android:textColor="@color/white_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/sign_up"
                android:textColor="@color/white_color"
                android:textSize="15sp"
                android:id="@+id/idTextSignUp"/>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>